syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.raytracer.proto";
option java_outer_classname = "RendererProto";

package raytracer_proto;

message Fov {
  double fov = 1;
}

message Resolution {
  uint32 width = 1;
  uint32 height = 2;
}

message Vec3 {
  double x = 1;
  double y = 2;
  double z = 3;
}

message ViewDirection {
  Vec3 direction = 1;
}

message Origin {
  Vec3 origin = 1;
}

message Operation {
  oneof operation {
    Fov set_fov = 1;
    Resolution set_resolution = 2;
    ViewDirection set_view_direction = 3;
    Origin set_origin = 4;
  }
}

message RenderRequest {
  repeated Operation operations = 1;
}

message RenderResponse {
  bytes picture_data = 1; // part of jpg/jpeg picture
}

service Renderer {
  rpc Render(RenderRequest) returns (stream RenderResponse);
}
